--- a/이것이 자바다.md
+++ b/이것이 자바다.md
@@ -1,4 +1,4 @@
-# 이것이 자바다
+# 기본 개요
 
 - 데이터 타입
     - 기본 타입 : 정수형, 실수형, 논리형
@@ -372,3 +372,151 @@
     - 체크 예외는 Exception 클래스를 상속, 언체크 예외는 RuntimeException 클래스를 상속하여 정의
     - 사용자 정의 예외 클래스에는 기본 생성자와 예외 메시지를 입력받는 생성자를 선언해준다.
     - 예외 메시지는 부모 생성자의 매개값으로 넘겨주는데, 이는 Exception 클래스의 getMessage()에서 리턴값으로 사용되기 때문이다.
+
+# Object 클래스
+
+- Object 클래스의 equals() 메소드는 기본적으로 객체의 번지를 비교하고 boolean 값을 리턴한다. 
+일반적으로 해당 메소드를 재정의해서 동등 비교용으로 사용된다. 예를 들어 String은 equals() 메소드를 재정의해서 내부 문자열이 같은지를 비교한다.
+- 객체 해시코드란 객체를 식별하는 정수를 의미한다. Object의 hashCode() 메소드는 기본적으로 객체의 메모리 번지를 이용해서 해시코드를 생성하기 때문에 객체마다 다른 정수값을 리턴한다.
+일반적으로 객체의 데이터를 기준으로 새로운 정수값을 리턴하도록 재정의해서 사용한다.
+- **자바는 두 객체의 동등성을 비교할 때 hashCode()와 equals() 메소드를 같이 사용하는 경우가 많다** (ex: HashSet 컬렉션)**.** 우선 hashCode()의 반환값이 같은지를 확인하고, 그 다음 equals() 메소드가 true를 리턴하는지를 확인해서 동등 객체임을 판단한다.
+- Object의 toString() 메소드는 객체의 문자 정보를 리턴한다. 기본적으로 ‘클래스명@16진수해시코드’로 구성된 문자열을 리턴한다. 
+객체의 문자 정보가 중요한 경우에는 해당 메소드를 재정의해서 간결하고 유익한 정보를 리턴하도록 해야 한다. 예를 들어, Date 클래스는 현재 날짜와 시간을, String 클래스는 저장된 문자열을 리턴하도록 toString() 메소드를 재정의하고 있다.
+- System.out.println() 메소드는 매개값이 기본타입 혹은 문자열일 경우 해당 값을 그대로 출력하고, 객체인 경우 객체의 toString() 메소드를 호출해서 리턴값을 출력한다.
+
+# 레코드
+
+- 데이터 전달을 위한 DTO를 작성할 때 반복적으로 사용되는 코드를 줄이기 위해 Java 14부터 레코드가 도입되었다.
+- 선언
+    
+    ```java
+    public record Person(String name, int age) {
+    }
+    ```
+    
+    - 이렇게 선언된 레코드 소스를 컴파일 하면 변수의 타입과 이름을 이용해서 private final 필드가 자동 생성되고, 생성자 및 Getter 메소드가 자동으로 추가된다. 그리고 hashCode(), equals(), toString() 메소드를 재정의한 코드도 자동으로 추가된다.
+    - 인스턴스 필드 참조 시, getName()이 아닌 name()을 사용한다
+
+# 롬복
+
+- @Data가 붙게 되면 컴파일 과정에서 기본 생성자와 함께 Getter, Setter, hashCode(), equals(), toString() 메소드가 자동으로 생성된다.
+- @Data는 @RequiredArgsConstructor, @Getter, @Setter, @EqualsAndHashCode, @ToString 어노테이션들이 합쳐진 것과 동일한 효과를 낸다
+- @RequiredArgsConstructor는 기본적으로 기본 생성자와 final 또는 @NotNull이 붙은 필드가 있다면 이 필드만 초기화시키는 생성자를 포함시킨다.
+    - final 필드에 대해서는 Setter가 만들어지지 않고, @NotNull에 대해서는 Setter가 만들어진다.
+- 자바 프로그램은 JVM위에서 실행된다. 따라서 운영체제의 모든 기능을 자바 코드로 직접 접근하기란 어렵다. 하지만 java.lang 패키지에 속하는 System 클래스를 이용하면 운영체제의 일부 기능을 이용할 수 있다.
+
+# 리플렉션
+
+- 자바는 클래스와 인터페이스의 메타 정보를 Class 객체로 관리한다. 여기서 메타 정보란 패키지 정보, 타입 정보, 멤버 정보(생성자, 필드, 메소드) 등을 말한다.
+- 이러한 클래스와 인터페이스의 메타 정보를 읽고 수정하는 행위를 리플렉션이라고 한다.
+
+# 어노테이션
+
+- 클래스 또는 인터페이스를 컴파일하거나 실행할 때 어떻게 처리해야 할 것인지를 알려주는 설정 정보
+- 어노테이션의 용도
+    - 컴파일 시 사용하는 정보 전달
+    - 빌드 툴이 코드를 자동으로 생성할 때 사용하는 정보 전달
+    - 실행 시 특정 기능을 처리할 때 사용하는 정보 전달
+- 어노테이션 정의 예시
+    
+    ```java
+    public @interface AnnotationName {
+    	String prop1(); // 어노테이션 속성1
+    	int prop2() default 1; // 어노테이션 속성2 : 기본값 1, 생략 가능
+    }
+    
+    @AnnotationName(prop1 = "값");
+    @AnnotationName(prop1 = "값", prop2 = 3);
+    ```
+    
+    ```java
+    public @interface AnnotationName {
+    	String value(); // 기본 속성
+    	int prop2() default 1;
+    }
+    
+    @Annotation("값"); // 기본 속성 value에 자동 대입
+    @Annotation(value = "값", prop2 = 3);
+    ```
+    
+    ```java
+    @Target({ElementType.TYPE, ElementType.FIELD, ElementType.METHOD })
+    @Retention(RetentionPolicy.RUNTIME)
+    public @interface AnnotationName {
+    }
+    ```
+    
+    - @Target
+        - 어노테이션 적용 대상 지정
+        - 적용 대상의 종류는 ElementType 열거 상수로 정의되어 있음
+            - TYPE : 클래스, 인터페이스, 열거 타입
+            - ANNOTATION_TYPE : 어노테이션
+            - FIELD, CONSTURCTOR, METHOD, LOCAL_VARIABLE, PACKAAGE
+        - 기본 속성인 value는 ElementType 배열을 값으로 가짐
+    - @Retention
+        - 해당 어노테이션을 언제까지 유지할 것인지를 지정
+        - 어노테이션 유지 정책은 RetentionPolicy 열거 상수로 정의되어 있음
+            - SOURCE : 컴파일 시 적용 후 제거됨
+            - CLASS : 메모리로 로딩할 때 적용 후 제거됨
+            - RUNTIME : 프로그램 실행 시 적용되어 유지됨
+        - 기본 속성인 value는 RetentionPolicy 열거 상수 값을 가짐
+- 애플리케이션은 리플렉션을 이용해서 적용 대상으로부터 어노테이션의 정보를 다음의 메소드로 얻어낸다.
+    - boolean isAnnotationPresent(AnnotationName.class) : 지정한 어노테이션이 적용되었는지 여부
+    - Annotation getAnnotation(AnnotationName.class) : 지정한 어노테이션이 적용되어 있으면 어노테이션을 반환, 그렇지 않다면 null 리턴
+    - Annotation[] getDeclaredAnnotations() : 적용된 모든 어노테이션을 리턴
+- 코드 예시
+    
+    ```java
+    @Target({ElementType.METHOD})
+    @Retention(RetentionPolicy.RUNTIME)
+    public @interface PrintAnnotation {
+    	String value() default "-";
+    	int number() default 15;
+    }
+    ```
+    
+    ```java
+    print class Service {
+    	@PrintAnnoation
+    	public void method1() {
+    		System.out.println("실행 내용1");
+    	}
+    
+    	@PrintAnnotation("*")
+    	public void method2() {
+    		System.out.println("실행 내용2");
+    	}
+    
+    	@PrintAnnotation(value = "#", number = 20)
+    	public void method3() {
+    		System.out.println("실행 내용3");
+    	}
+    }
+    ```
+    
+    ```java
+    public class PrintAnnotationExample {
+    	public static void main(String[] args) throws Extention {
+    		Method[] declaredMethods = Service.class.getDeclaredMethods();
+    		for(Method method : declaredMethods) {
+    			PrintAnnotation printAnnotation = method.getAnnotation(PrintAnnotation.class);
+    
+    			printLine(printAnnotation);
+    			method.invoke(new Service());
+    			printLine(printAnnotation);
+    		}
+    	}
+    
+    	public static void printLine(PrintAnnotation printAnnotation) {
+    		if(printAnnotation != null) {
+    			int number = printAnnotation.number();
+    
+    			for(int i=0; i<number; i++) {
+    				System.out.print(printAnnotation.value());
+    			}
+    			
+    			System.out.println();
+    		}
+    	}
+    }
+    ```
