--- a/이것이 자바다.md
+++ b/이것이 자바다.md
@@ -324,6 +324,8 @@
 
 # 라이브러리와 모듈
 
+- (추후 작성)
+
 # 예외 처리
 
 - 에러(Error) : 컴퓨터 하드웨어의 고장으로 인해 응용프로그램 실행 오류가 발생하는 것
@@ -517,6 +519,170 @@
     			
     			System.out.println();
     		}
+    	}
+    }
+    ```
+    
+
+# 멀티 스레드
+
+- 모든 자바 프로그램은 메인 스레드가 main() 메소드를 실행하면서 시작된다.
+- 메인 스레드가 종료되더라도, 작업 스레드가 계속 실행 중이면 프로세스는 종료되지 않는다.
+- 작업 스레드 생성 방법
+    - Runnable 인터페이스 구현 & run() 메소드 재정의 → Thread 생성자 매개값으로 전달 → start() 호출
+    - Thread 클래스 상속 &  run() 메소드 재정의 → 객체 생성 → start() 호출
+- 스레드의 상태 : NEW, RUNNABLE, RUNNING, 일시정지, TERMINATED
+    - sleep(long millis) : 주어진 시간 동안 스레드를 일시 정지 상태로 만든다. 주어진 시간이 지나면 자동으로 실행 대기 상태가 된다
+    - join() : join() 메소를 호출한 스레드는 일시 정지 상태가 된다. 실행 대기 상태가 되려면, join() 메소드를 가진 스레드(피호출자)가 종료되어야 한다
+    - yield() : 실행 상태에서 다른 스레드에게 실행을 양보하고 실행 대기 상태가 된다 (busy waiting 회피)
+    - interrupt() : 스레드가 일시 정지 상태에 있을 때, 해당 스레드에 InterruptedException 예외를 발생시킨다. 이를 이용하여 run() 메소드를 정상 종료시킬 수 있다. 스레드가 실행 대기/실행 상태일 때에는 interrupt() 메소드가 호출되어도 InterruptedException 예외가 발생하지 않는다.
+    - interrupted(), isInterrupted() : 다른 스레드가 해당 스레드의 interrupt() 메소드를 호출한 경우 true를 반환한다. 전자는 정적 메소드, 후자는 인스턴스 메소드이다.
+- 락
+    - 자바는 동기화 블록과 메소드를 통해 락을 제공한다
+        - 동기화 블록 : synchronized(this) { }
+        - 동기화 메소드 : public synchronized void method() { }
+    - 객체 내부에 동기화 메소드와 동기화 블록이 여러 개가 있다면, 스레드가 이들 중 하나를 실행할 때 다른 스레드는 해당 메소드는 물론이고 다른 동기화 메소드 및 블록도 실행할 수 없다. 하지만 일반 메소드는 실행이 가능하다.
+    - wait() : 스레드를 일시 정지 상태로 만든다
+    - notify() : wait()에 의해 일시 정지된 스레드 중 한 개를 실행 대기 상태로 만든다
+    - notifyAll() : wait()에 의해 일시 정지된 모든 스레드를 실행 대기 상태로 만든다
+    - notify(), notifyAll()은 모두 동기화 메소드 혹은 동기화 블록 내에서만 사용할 수 있다.
+- 데몬 스레드
+    - 주 스레드의 작업을 돕는 보조적인 역할을 수행하는 스레드
+    - 주 스레드가 종료되면 데몬 스레드도 따라서 자동으로 종료된다
+    - 예시 : 워드프로세서의 자동 저장, 미디어플레이어의 동영상 및 음악 재생, JVM의 가비지 컬렉터
+    - 주 스레드가 데몬이 될 스레드의 setDaemon(true)를 호출함으로써 데몬 스레드를 생성한다
+- 스레드풀
+    - 작업 처리에 사용되는 스레드를 제한된 개수만큼 생성해놓고 작업 큐에 들어오는 작업들을 스레드가 하나씩 맡아 처리하는 방식, 작업 처리를 마친 스레드는 다시 작업 큐에서 새로운 작업을 가져와 처리
+    - 병렬 작업 증가로 인한 스레드의 폭증을 방지하기 위해 사용
+    - 자바는 스레드풀을 생성하고 사용할 수 있도록 java.util.concurrent 패키지에서 ExecutorService 인터페이스와 Executors 클래스를 제공하고 있다.
+    - 스레드풀(ExecutorService) 생성 방법
+        - Executors의 정적 메서드를 이용한 방법
+            - static ExecutorService newCachedThreadPool()
+                - 초기 스레드 개수 : 0
+                - 최대 수 : Integer.MAX_VALUE
+                - 60초 동안 스레드가 아무 작업을 하지 않으면 스레드를 풀에서 제거
+            - static ExecutorService newFixedThreadPool(int nThreads)
+                - 초기 스레드 수 : 0
+                - 최대 스레드 개수 : nThreads
+                - 스레드가 한번 생성되면 풀에서 제거되지 않음
+        - ThreadPoolExecutor를 이용한 방법
+            
+            ```java
+            ExecutorService threadPool = new ThreadPoolExecutor(
+            	3,  // 코어 스레드 개수(스레드 삭제 시 최소한으로 유지할 스레드의 개수)
+            	100,  // 최대 스레드 개수
+            	120L, TimeUnit.SECONDS,// 삭제 대기 시간, 시간 단위 - 120초 동안 대기
+            	new SynchronousQueue<Runnable>() // 작업 큐
+            );
+            ```
+            
+    - 스레드풀 종료
+        - 스레드풀의 스레드는 데몬 스레드가 아니기 때문에 main 스레드가 종료되더라도 작업을 처리하기 위해 계속 실행 상태로 남아있다.
+        - 스레드풀 종료 방법
+            - void shutdown() : 작업 큐에 대기하고 있는 모든 작업을 처리한 후 스레드풀을 종료
+            - List<Runnable> shutdownNow() : 현재 작업 처리 중인 스레드를 interrupt해서 작업을 중지시키고 스레드풀을 종료, 리턴값은 작업 큐에 남아있는 미처리된 작업(Runnable)의 목록
+    - 작업 생성
+        - 하나의 작업은 Runnable 또는 Callable 구현 클래스로 표현된다. 둘의 차이점은 작업 처리 완료 후 리턴값이 있느냐 없느냐이다.
+        - Runnable 익명 구현 클래스
+            
+            ```java
+            new Runnable() {
+            	@Override
+            	public void run() {
+            		// 작업 내용
+            	}
+            }
+            ```
+            
+        - Callable 익명 구현 클래스
+            
+            ```java
+            new Callable<T> {
+            	@Override
+            	public T call() throws Exception {
+            		// 작업 내용
+            		return T;
+            	}
+            }
+            ```
+            
+            - call()의 리턴 타입은 Callable<T>에서 지정한 T 타입 파라미터와 동일한 타입이어야 한다.
+    - 작업 처리 요청
+        - 작업 처리 요청이란 ExecutorService의 작업 큐에 Runnable 또는 Callable 객체를 넣는 행위를 말한다.
+        - Runnable 또는 Callable 객체가 ExecutorService의 작업 큐에 들어가면 ExecutorService는 작업을 처리할 스레드가 있는지 보고, 없다면 스레드를 새로 생성한다.
+        - 스레드는 작업 큐에서 Runnable 또는 Callable 객체를 꺼내와 run() 또는 call() 메소드를 실행하면서 작업을 처리한다.
+        - 작업 처리 요청을 위해 ExecutorService는 다음의 두 가지 메소드를 제공한다
+            - void execute(Runnable command)
+                - Runnable을 작업 큐에 저장
+                - 작업 처리 결과를 리턴하지 않음
+            - Future<T> submit(Callable<T> task)
+                - Callable을 작업 큐에 저장
+                - 작업 처리 결과를 Future로 리턴
+- 코드 예시 1
+    
+    ```java
+    public class RunnableExecuteExample {
+    	public static void main(String[] args) {
+    		String[][] mails = new String[1000][3];
+    		for(int i=0; i<mails.length; i++) {
+    			mails[i][0] = "admin@my.com";
+    			mails[i][1] = "member" + i + "@my.com";
+    			mails[i][2] = "신상품 입고";
+    		}
+    
+    		ExecutorService executorService = Executors.newFixedThreadPool(5);
+    
+    		for(int i=0; i<mails.length; i++) {
+    			final int idx = i;
+    			executorService.execute(new Runnable() {
+    				@Override
+    				public void run() {
+    					Thread thread = Thread.currentThread();
+    					String from = mails[idx][0];
+    					String to = mails[idx][1];
+    					String content = mails[idx][2];
+    					System.out.println("[" + thread.getName() + "] " +
+    											from + " ==> " + to + ": " + content);
+    				}
+    			});
+    		}
+    
+    		executorService.shutdown();
+    	}
+    }
+    ```
+    
+- 코드 예시 2
+    
+    ```java
+    public class CallableSubmitExample {
+    	public static void main(String[] args) {
+    		ExecutorService executorService = Executors.newFixedThreadPool(5);
+    
+    		for(int i=1; i<=100; i++) {
+    			final int idx = i;
+    			Future<Integer> future = executorService.submit(new Callable<Integer>() {
+    				@Override
+    				public Integer call() throws Exception {
+    					int sum = 0;
+    					for(int i=1; i<=idx; i++) {
+    						sum += i;
+    					}
+    					Thread thread = Thread.currentThread();
+    					System.out.println("[" + thread.getName() + "] 1~" + idx + "합 계산");
+    					return sum;
+    				}
+    			});
+    
+    			try {
+    				int result = future.get(); // Callable의 call() 메소드가 리턴한 값 획득
+    				System.out.println("\t리턴값: " + result);
+    			} catch (Exception e) {
+    				e.printStackTrace();
+    			}
+    		}
+    
+    		executorService.shutdown();
     	}
     }
     ```
