--- a/이것이 자바다.md
+++ b/이것이 자바다.md
@@ -686,3 +686,111 @@
     	}
     }
     ```
+# 컬렉션 자료구조
+
+- 컬렉션 프레임워크 : 널리 알려진 자료구조를 바탕으로 객체들을 효율적으로 추가, 삭제, 검색할 수 있도록 관련된 인터페이스와 클래스들을 java.util 패키지에 포함시켜 놓은 것
+- 컬렉션 프레임워크의 몇 가지 인터페이스를 통해 다양한 컬렉션 클래스를 이용할 수 있음
+    - Collection
+        - List - ArrayList, Vector, LinkedList
+        - Set - HashSet, TreeSet
+    - Map - HashMap, Hashtable, Treemap, Properties
+    - Stack
+    - Queue
+- List (순서 유지, 중복 허용, 인덱스로 관리)
+    - ArrayList
+        - 내부 배열에 객체의 번지를 저장
+        - 타입 파라미터 생략 시 모든 종류의 객체를 저장 가능
+        - 특정 인덱스의 객체 삭제 시, 바로 뒤 인덱스부터 마지막 인덱스까지 모두 앞으로 당겨짐
+        - 특정 인덱스에 객체 삽입 시, 해당 인덱스부터 마지막 인덱스까지 모두 뒤로 밀려남
+        - 빈번한 객체 삭제 및 삽입 연산이 발생하는 경우 ArrayList 보다 LinkedList가 적합
+    - Vector
+        - 내부 구조는 ArrayList와 동일
+        - ArrayList와 달리 synchronized 메소드로 구성되어 있어 스레드 세이프를 보장
+    - LinkedList
+        - 내부 구조가 연결 리스트로 구성
+        - 삽입과 삭제 성능이 ArrayList보다 좋음
+- Set (순서 유지 x, 중복 허용 x, 인덱스 x)
+    - HashSet
+        - 동일한 객체를 중복 저장하지 않음
+        - 동일성 판단 : hashCode()의 리턴값이 같고 equals()의 리턴값이 true인 경우
+    - TreeSet
+        - 이진 트리 기반 Set 컬렉션
+        - TreeSet의 경우 검색 관련 메소드가 TreeSet에만 정의되어 있기 때문에, Set으로 캐스팅해서 사용하지 않음
+- Map
+    - 키와 값으로 구성된 엔트리 객체를 저장 (키와 값 모두 객체)
+    - 키는 중복 저장할 수 없지만, 값은 중복 저장 가능 (즉, 컬렉션에 같은 값을 가진 여러 엔트리가 존재 가능)
+    - 기존에 저장된 키와 동일한 키로 값을 저장하면 기존의 값이 새로운 값으로 대치됨
+    - Set<Map.Entry<K, V>> entrySet() : 모든 엔트리 객체를 Set에 담아서 리턴
+    - 구현 클래스
+        - HashMap
+            - hashCode()의 리턴값으로 해시 테이블에서 버킷을 찾고, 버킷 내에서 equals() 메소드를 이용하여 키의 중복을 확인
+        - Hashtable
+            - HashMap과 동일한 구조
+            - HashMap과 달리 synchronized 메소드로 구성되어 있음 → 스레드 세이프 보장
+        - Properties
+            - HashTable의 자식 클래스
+            - 키와 값을 String 타입으로 제한
+            - 프로퍼티 파일(키와 값이 ‘=’로 연결되어 있는 텍스트 파일)을 읽을 때 사용
+            - load(), getProperty() 사용
+        - TreeMap
+            - 이진 트리 기반 Map 컬렉션
+            - 키 값을 기준으로 엔트리를 자동 정렬
+- Comparable 인터페이스
+    - TreeSet과 Treepmap에 저장되는 키 객체는 저장과 동시에 오름차순으로 정렬된다
+    - 이를 위해, Comparable 인터페이스를 구현한 객체만 저장 가능하다
+    - Integer, Double, String 타입은 기본적으로 Comparable을 구현하고 있다
+    - Comparable 인터페이스에는 compareTo() 메소드가 정의되어 있다
+- Comparator 인터페이스
+    - Comparable 비구현 객체를 저장하려면, 컬렉션 생성 시 비교자를 제공해야 한다
+    - 비교자 : Comparator 인터페이스를 구현한 객체
+    - Comparator 인터페이스는 int compare(T o1, To2) 메소드가 정의되어 있다
+    - 코드 예시
+        
+        ```java
+        class Fruit {
+        	String name;
+        	int price;
+        
+        	public Fruit(String name, int price) {
+        		this.name = name;
+        		this.price = price;
+        	}
+        }
+        
+        public class Main {
+        	public static void main(String[] args) {
+        		TreeSet<Fruit> treeSet = new TreeSet<>(new Comparator<Fruit>() {
+        			@Override
+        			public int compare(Fruit o1, Fruit o2) {
+        				if(o1.price == o2.price) {
+        					return o1.name.compareTo(o2.name);
+        				}
+        				return o1.price - o2.price;
+        			}
+        		});
+        
+        		treeSet.add(new Fruit("Apple", 10));
+            treeSet.add(new Fruit("Banana", 5));
+            treeSet.add(new Fruit("Orange", 8));
+        
+        		System.out.println("the cheapest fruit : " + treeSet.first().name);
+        	}
+        }
+        ```
+        
+- 동기화된 컬렉션
+    - 자바는 ArrayList, HashSet, HashMap의 스레드 세이프를 보장하기 위해 Collections.synchronizedXXX() 메소드를 제공한다.
+        
+        
+        | 리턴 타입 | 메소드(매개변수) |
+        | --- | --- |
+        | List<T> | synchronizedList(List<T> list) |
+        | Map<K, V> | synchronizedMap(Map<T> m) |
+        | Set<T> | synchronizedSet(Set<T> s) |
+    - 이 메소드들은 매개값으로 전달된 컬렉션의 메소드를 synchronized로 래핑하여 동기화된 컬렉션을 반환한다.
+- 불변 컬렉션
+    - Unmodifiable Collections : 요소를 추가, 삭제할 수 없는 컬렉션
+    - 생성 방법
+        - List, Set, Map 인터페이스의 정적 메소드 of()로 생성
+        - List, Set, Map 인터페이스의 정적 메소드 copyOf()로 생성
+        - Arrays.asList()로 수정할 수 없는 List 컬렉션 생성
