--- a/이것이 자바다.md
+++ b/이것이 자바다.md
@@ -794,3 +794,170 @@
         - List, Set, Map 인터페이스의 정적 메소드 of()로 생성
         - List, Set, Map 인터페이스의 정적 메소드 copyOf()로 생성
         - Arrays.asList()로 수정할 수 없는 List 컬렉션 생성
+# 람다식
+
+- 함수형 프로그래밍 : 함수를 정의하고 이를 데이터 처리부로 보내 데이터를 처리하는 기법
+    - 데이터 처리부는 데이터만 가지고 있고 처리 방법이 정해져 있지 않아 외부에서 제공된 함수에 의존
+    - 데이터 처리부는 제공된 함수의 인자값으로 데이터를 넣고 함수에 정의된 처리 내용을 실행
+    - 동일한 데이터라도 전달된 함수에 따라 처리 결과가 달라짐
+    - 이러한 데이터 처리의 다형성이 함수형 프로그래밍의 특징
+- 람다식 : 자바에서 함수형 프로그래밍을 위해 Java 8부터 지원하는 기능
+- 자바는 람다식을 **인터페이스의 익명 구현 객체**로 변환하여 처리한다.
+    - 이때의 인터페이스는 함수형 인터페이스(단 하나의 추상 메소드를 가지는 인터페이스)로 제한된다
+    - 즉, **람다식은 함수형 인터페이스의 익명 구현 객체를 생성**한다
+    - @FunctionalInterface 어노테이션 : 컴파일 타임에 해당 인터페이스가 추상 메소드를 하나만 가지는지 검사
+- 메소드 참조
+    - 메소드를 참조해서 매개변수의 정보 및 리턴 타입을 알아내 람다식에서 불필요한 매개변수를 제거하는 것을 목적으로 함
+    - 람다식 대신 함수형 인터페이스의 추상 메소드와 동일한 시그니처를 가지는 기존의 메소드를 전달하는 방법
+    - 정적 메소드를 참조하는 경우 : ‘클래스 :: 메소드’
+    - 인스턴스 메소드를 참조하는 경우 : ‘참조변수 :: 메소드’
+    - 코드 예시
+        
+        ```java
+        @FunctionalInterface
+        public interface Calculable {
+        	double calc(double x, double y);
+        }
+        ```
+        
+        ```java
+        public class Person {
+        	public void action(Calculable calculable) {
+        		double result = calculable.calc(10, 4);
+        		System.out.println("결과: " + result);
+        	}
+        }
+        ```
+        
+        ```java
+        public class Computer {
+        	public static double staticMethod(double x, double y) {
+        		return x + y;
+        	}
+        
+        	public double instanceMethod(double x, double y) {
+        		return x + y;
+        	}
+        }
+        ```
+        
+        ```java
+        public class Main {
+        	public static void main(String[] args) {
+        		Person person = new Person();
+        
+        		person.action(Computer :: staticMethod);
+        
+        		Computer com = new Computer();
+        
+        		person.action(com :: instanceMethod);
+        	}
+        }
+        ```
+        
+    - 매개변수의 메소드 참조
+        
+        ```java
+        (a, b) -> { a.instanceMethod(b); }
+        ```
+        
+        - 위와 같이 람다식에서 제공되는 a 매개변수의 메소드를 호출해서 b 매개변수를 매개값으로 사용하는 경우 메소드 참조로 대치할 수 있다.
+        
+        ```java
+        a의 클래스이름 :: instanceMethod
+        ```
+        
+        - 코드 예시
+            
+            ```java
+            @FunctionalInterface
+            public interface Comparable {
+            	int compare(String a, String b);
+            }
+            ```
+            
+            ```java
+            public class Main {
+            	public static void main(String[] args) {
+            		Person new Person();
+            		// person.ordering((a, b) -> a.compareToIgnoreCase(b));
+            		person.ordering(String :: compareToIgnoreCase);
+            	}
+            }
+            ```
+            
+- 생성자 참조
+    - 람다식이 단순히 객체를 생성하고 리턴하도록 구성된다면 람다식을 생성자 참조로 대치할 수 있다.
+        
+        ```java
+        // (a, b) -> { return new 클래스(a, b); }
+        클래스 :: new
+        ```
+        
+    - 코드 예시
+        
+        ```java
+        @FunctionalInterface
+        public interface Creatable1 {
+        	public Member create(String id);
+        }
+        ```
+        
+        ```java
+        @FunctionalInterface
+        public interface Creatable2 {
+        	public Member create(String id, String name);
+        }
+        ```
+        
+        ```java
+        public class Member {
+        	private String id;
+        	private String name;
+        
+        	public Member(String id) {
+        		this.id = id;
+        	}
+        
+        	public Member(String id, String name) {
+        		this.id = id;
+        		this.name = name;
+        	}
+        
+        	@Override
+        	public String toString() {
+        		String info = "{ id: " + id + ", name: " + name + " }";
+        		return info; 
+        }
+        ```
+        
+        ```java
+        public class Person {
+        	public Member getMember1(Creatable1 creatable) {
+        		String id = "winter";
+        		return creatable.create(id);
+        	}
+        
+        	public Member getMember2(Creatable2 creatable) {
+        		String id = "winter";
+        		String name = "한겨울";
+        		return creatable.create(id, name);
+        	}
+        }
+        ```
+        
+        ```java
+        public class Main {
+        	public static void main(String[] args) {
+        		Person person. new Person();
+        
+        		Member m1 = person.getMember1(Member :: new);
+        		Member m2 = person.getMember2(Member :: new);
+        
+        		System.out.println(m1);
+        		System.out.println(m2);
+        	}
+        }
+        ```
+        
+        - 두 가지 방법 모두 생성자 참조를 사용하지만, 함수형 인터페이스의 매개변수에 따라 실행되는 Member 생성자가 다르다는 것을 확인할 수 있다 (컴파일러가 함수형 인터페이스의 추상 메서드와 동일한 매개변수 시그니처를 가지는 생성자를 찾아 실행)
