스트림 내용 추가

--- a/이것이 자바다.md
+++ b/이것이 자바다.md
@@ -961,3 +961,166 @@
         ```
         
         - 두 가지 방법 모두 생성자 참조를 사용하지만, 함수형 인터페이스의 매개변수에 따라 실행되는 Member 생성자가 다르다는 것을 확인할 수 있다 (컴파일러가 함수형 인터페이스의 추상 메서드와 동일한 매개변수 시그니처를 가지는 생성자를 찾아 실행)
+# 스트림
+
+## 참고
+
+- **강의 영상** : https://www.youtube.com/watch?v=2f8HCpk_FsE&list=PLVsNizTWUw7EmX1Y-7tB2EmsK6nu6Q10q&index=160
+- 아래 요약한 내용만으로는 다소 미흡한 부분이 있어 영상 시청 추천
+- 책(영상)에서는 스트림에 대한 아주 아주 상세한 내용까지 잘 정리해서 다루고 있음, 적극 추천
+
+## 스트림
+
+- 컬렉션 및 배열의 요소를 반복 처리하는데 사용되는 반복자
+- Iterator와의 차이점
+    - 내부 반복자이므로 처리 속도가 빠르고 병렬 처리에 효율적이다
+    - 람다식으로 다양한 요소 처리를 정의할 수 있다
+    - 중간 처리와 최종 처리를 수행하도록 파이프 라인을 형성할 수 있다
+- 외부 반복자
+    - 컬렉션의 요소를 컬렉션 바깥으로 반복적으로 가져와 처리하는 방법 (for문, Iterator)
+    - 컬렉션의 요소를 외부로 가져오는 코드와 처리하는 코드 모두 개발자가 작성
+- 내부 반복자
+    - 요소 처리 방법을 컬렉션 내부로 주입시켜 요소를 반복적으로 처리하는 방법
+    - 개발자가 작성한 데이터 처리 코드(람다식)를 가지고 컬렉션 내부에서 요소를 반복 처리
+    - 멀티 코어 CPU를 최대한 활용하기 위해 요소들을 분배시켜 병렬 작업 처리가 가능 → 하나씩 처리하는 순차적 외부 반복자보다 효율적인 반복 처리가 가능
+    - 코드 예시
+        
+        ```java
+        public class Main {
+        	public static void main(Stringp[] args) {
+        		List<String> list = Arrays.asList({"BTS", "봉준호", "손흥민", "제이팍"});
+        		
+        		Stream<String> parallelStream = list.parallelStream();
+        		parallelStream.forEach(name -> {
+        			System.out.println(name + ": " + Thread.currentThread().getName());
+        		});
+        	}
+        }
+        ```
+        
+- 스트림 파이프라인
+  
+    ![Untitled](https://github.com/csct3434/CS-Book/assets/107951175/4c56cdb8-78b0-4a51-91c8-2d201df3c61c)
+    
+    - 스트림은 여러 중간 스트림에 의해 연결될 수 있는데, 이와 같이 스트림이 연결되어 있는 것을 스트림 파이프라인이라고 한다
+    - 오리지널 스트림과 집계 처리 사이의 중간 스트림들은 최종 처리를 위해 요소를 걸러내거나(필터링), 변환시키거나(매핑), 정렬하는 작업을 수행한다
+    - 최종 처리는 중간 처리에서 정제된 요소들을 반복하거나 집계(카운팅, 총합, 평균) 작업을 수행한다
+    - 스트림 파이프라인으로 구성할 때 주의할 점은 파이프라인의 맨 끝에는 반드시 최종 처리 부분이 있어야 한다는 것이다. 최종 처리가 없다면 오리지널 및 중간 처리 스트림은 **동작하지 않는다**
+- 스트림 인터페이스
+
+    ![Untitled](https://github.com/csct3434/CS-Book/assets/107951175/86242308-d887-4fba-b476-1654e4f89c9e)
+    
+    - java.util.stream 패키지에는 스트림 인터페이스들이 있다
+    - BaseStream 인터페이스를 부모로 한 자식 인터페이스들은 위와 같은 상속 관계를 가진다
+    - BaseStream에는 모든 스트림에서 사용할 수 있는 공통 메소드들이 정의되어 있다
+    - Stream은 객체 요소를 처리하는 스트림이고, IntStream, LongStream, DoubleStream은 각각 기본 타입인 int, long, double 요소를 처리하는 스트림이다
+    - 이 스트림 인터페이스들의 구현 객체는 Collection, Arrays, Files, Random 등 다양한 리소스로 부터 얻을 수 있다
+    - java.util.Collection 인터페이스는 stream()과 parallelStream() 메소드를 가지고 있기 때문에 자식 인터페이스인 List와 Set 인터페이스를 구현한 모든 컬렉션에서 객체 스트림을 얻을 수 있다.
+
+## 중간 처리
+
+- 필터링 : 스트림의 요소를 걸러내는 중간 처리 기능
+    ![Untitled](https://github.com/csct3434/CS-Book/assets/107951175/c90b54b1-1010-48a6-94b0-b548c8bee087)
+    
+    - distinct()
+        - 객체 스트림의 경우 equals()의 리턴값이 true이면 동일한 요소로 판단
+        - IntStream, LongStream, DoubleStream은 같은 값일 경우 중복을 제거
+    - filter()
+        - Predicate가 true를 리턴하는 요소만 필터링
+            - Predicate : 함수형 인터페이스, `boolean test(T t)`
+- 매핑 : 스트림의 요소를 다른 요소로 변환하는 중간 처리 기능
+    - mapXxx 메소드
+      
+      <img width="561" alt="image" src="https://github.com/csct3434/CS-Book/assets/107951175/c3585f1b-fb11-4a1b-9b43-f7365f3e6e46">
+
+    - flatMapXxx 메소드
+        - 하나의 요소를 복수 개의 요소들로 변환한 새로운 스트림을 리턴
+        - T → Stream
+            - [A, B] → [[A1, A2], [B1, B2]] → [A1, A2, B1, B2]
+- 정렬 : sorted()
+
+## 최종 처리
+
+- 루핑 : 스트림에서 요소를 하나씩 반복해서 가져와 처리하는 것
+    - void forEach(Consumer<? super T> action)
+        - 리턴값 없이 최종 처리할 때 사용
+        - Consumer : 함수형 인터페이스, void accept(T t)
+- 매칭 : 요소들이 특정 조건에 만족하는지 여부를 조사하는 최종 처리 기능
+    - boolean allMatch(Predicate<T> predicate) : 모든 요소의 Predicate가 true면 true를 리턴
+    - boolean anyMatch(Predicate<T> predicate) : Predicate가 true인 요소가 존재하면 true를 리턴
+    - boolean noneMatch(Predicate<T> predicate) : 모든 요소의 Predicate가 false여야 true를 리턴
+- 집계
+    - 요소들을 처리해서 카운팅, 합계, 평균값, 최대값, 최소값 등과 같은 하나의 값으로 산출하는 최종 처리 기능
+    - 대량의 데이터를 가공해서 하나의 값으로 축소하는 Reduction이라고 볼 수 있다
+    - count(), max(), min(), sum(), findFirst()
+- 수집
+    - 필터링 혹은 매핑된 요소들을 새로운 컬렉션에 수집하고 이를 반환하는 처리 기능
+    - `collect(Collector<T, A, R> collector)`
+    - Collector<T, A, R>
+        - T : 요소 / A : 누적기(accumulator) / R : 요소가 저장될 컬렉션
+        - T 요소를 A 누적기가 R에 저장한다는 의미
+        - Collectors 클래스의 정적 메소드로 구현 객체를 얻을 수 있다
+            - Collector<T, ?, List<T>> Collectors.toList()
+            - Collector<T, ?, Set<T>> Collectors.toSet()
+            - Collector<T, ?, Map<K, U>> Collectors.toMap(Function<T, K> keyMapper, Function<T, U> valueMapper)
+- 그룹핑
+    - 컬렉션의 요소들을 그룹핑해서 Map 객체를 반환하는 처리 기능
+    - `collect(Collector<T, ?, Map<K, List<T>>> collector)`
+    - Collectors.groupingBy(Function<T, K> classfier) 메소드로 Collector를 획득하여 호출
+    - 예시 1
+        
+        ```java
+        Map<String, List<Stduent>> map = totalList.stream()
+        	.collect(
+        		Collectors.groupingBy(
+        			s -> s.getSex())
+        	);
+        ```
+        
+    - 예시 2
+        
+        ```java
+        Map<String, Double> map = totalList.stream()
+        	.collect(
+        		Collectors.groupingBy(
+        			s -> s.getSex(),
+        			Collectors.averagingDouble(s -> getScore())
+        		)
+        );
+        ```
+        
+
+## 요소 병렬 처리
+
+### 동시성과 병렬성
+
+- 멀티 스레드는 동시성 혹은 병렬성으로 실행된다
+- 동시성
+    - 다중 작업을 위해 멀티 스레드가 하나의 코어에서 번갈아 가며 실행되는 것
+    - 한 시점에 하나의 작업을 실행
+- 병렬성
+    - 다중 작업을 위해 여러 코어를 각각 이용해서 작업을 병렬로 실행하는 것
+    - 한 시점에 여러 개의 작업을 병렬로 실행
+- 데이터 병렬성
+    - 전체 데이터를 서브 데이터셋으로 분할하고, 이 서브 데이터셋들을 병렬처리하는 것
+    - **자바의 병렬 스트림은 데이터 병렬성을 구현한 것**
+- 작업 병렬성
+    - 서로 다른 작업을 병렬 처리하는 것
+
+### 자바 병렬 스트림
+<img width="414" alt="Untitled" src="https://github.com/csct3434/CS-Book/assets/107951175/8dfc27ba-0b57-48f6-b429-a916377f4025">
+
+- 자바 병렬 스트림은 요소들을 병렬 처리하기 위해 ForkJoin 프레임워크를 사용한다
+    - Fork 단계 : 전체 요소들을 서브 요소셋으로 분할하고, 각각의 서브 요소 셋을 멀티 코어에서 병렬로 처리한다
+    - Join 단계 : 서브 결과들을 결합해서 최종 결과를 산출한다
+- 포크조인 프레임워크는 ExecutorServiec의 구현체인 ForkJoinPool을 사용해서 작업 스레드를 관리한다
+- 병렬 스트림 획득 방법
+    - Collectors - parallelStream()
+    - Stream, IntStream, LongStream, DoubleStream - parallel()
+
+### 병렬 처리 성능
+
+- 스트림의 병렬 처리가 순차 처리보다 항상 실행 성능이 좋은 것은 아니다. 병렬 처리는 포크 및 조인 단계가 있고, 스레드 풀을 생성하는 추가적인 비용이 발생하기 때문이다.
+- 컬렉션에 전체 요소의 수가 적고 요소당 처리 시간이 짧으면 일반 스트림이 병렬 스트림보다 빠를 수 있다.
+- ArrayList와 배열은 인덱스로 요소를 관리하기 때문에 포크 단계에서 요소를 쉽게 분리할 수 있지만, HashSet, TreeSet은 요소 분리가 쉽지 않고, LinkedList 역시 링크를 따라가야 하므로 요소 분리가 쉽지 않다. 따라서, 후자의 경우 상대적으로 병렬 처리가 느리다.
+- 코어의 수가 적은 경우에는 일반 스트림이 더 빠를 수 있다. 병렬 스트림은 스레드 수가 증가하여 동시성이 많이 일어나므로 오히려 느려질 수 있다.
