--- a/Real MySQL 8.0 (1권)/인트로.md
+++ b/Real MySQL 8.0 (1권)/인트로.md
@@ -64,7 +64,7 @@ MySQL의 내부 구조 및 동작 방식에 초점을 두고 정리했습니다.
 - Logical Upgrade
     - mysqldump 도구 등을 이용해 MySQL 서버의 데이터를 SQL 문장이나 텍스트 파일로 덤프한 후, 새로 업그레이드된 버전의 MySQL 서버에서 덤프된 데이터를 적재하는 방법
 
-# 사용자 및 권한
+# 03. 사용자 및 권한
 
 ### 참고
 
