--- a/Real MySQL 8.0 (1권)/3. 트랜잭션과 잠금.md
+++ b/Real MySQL 8.0 (1권)/3. 트랜잭션과 잠금.md
@@ -75,3 +75,18 @@
         - AUTO_INCREMENT락은 테이블에 단 하나만 존재
         - 자동 증가 락의 작동 방식은 `innodb_autoinc_lock_mode` 시스템 변수에 따라 달라짐
         - INSERT문이 실패했더라도 한 번 증가된 AUTO_INCREMENT 값은 다시 줄어들지 않고 그대로 남음
+      
+## 격리 수준
+
+- 격리 수준 : 여러 트랜잭션이 동시에 처리될 때 특정 트랜잭션이 다른 특랜잭션에서 변경하거나 조회하는 데이터를 볼 수 있게 허용할지 말지를 결정하는 것
+- SERIALIZABLE 격리 수준만 아니면, 격리 수준이 높아진다고 해서 크게 성능의 차이가 없다
+- 일반적인 온라인 서비스 용도의 DB는 Read Committed 혹은 Repeatable Read를 사용
+    - 오라클 같은 DBMS에서는 주로 Read Committed 수준을 사용하고, MySQL에서는 Repeatable Read 수준을 주로 사용한다
+- MySQL의 격리 수준
+    - Repeatable Read
+        - InnoDB 스토리지 엔진의 기본 격리 수준
+        - MVCC로 인해 Non-Repeatable Read 부정합이 발생하지 않음
+        - Repeatable Read에서는 MVCC를 보장하기 위해 **실행 중인 트랜잭션 가운데 가장 오래된 트랜잭션**을 기준으로 앞서 처리된 **특정 범위의 트랜잭션에 의해 변경된 언두 데이터를 보존**한다
+        - InnoDB에서는 갭 락과 넥스트 락 덕분에 Repeatable Read 격리 수준에서도 Phantom Read 부정합이 발생하지 않는다
+    - Serializable
+        - InnoDB 테이블에서 기본적으로 순수한 읽기 작업은 레코드 잠금을 설정하지 않고 실행되지만(Non-Locking Consistent Read), Serializable 수준에서는 읽기 작업도 공유 잠금을 획득해야한다.
