Update 01. 계층형 아키텍처의 문제는 무엇일까?.md

--- a/만들면서 배우는 클린 아키텍처/01. 계층형 아키텍처의 문제는 무엇일까?.md
+++ b/만들면서 배우는 클린 아키텍처/01. 계층형 아키텍처의 문제는 무엇일까?.md
@@ -34,7 +34,7 @@
 - 전통적인 계층형 아키텍처에서 전체적으로 적용되는 유일한 규칙은, 특정한 계층에서는 같은 계층에 있는 컴포넌트나 아래에 있는 계층에만 접근 가능하다는 것
 - 문제는 이러한 규칙을 지키기 위해 다음과 같은 지름길(꼼수)을 택하기 쉬움
     - 상위 계층에 위치한 컴포넌트에 접근하기 위해 컴포넌트를 계층 아래로 내려버림 (ex : 헬퍼, 유틸리티 컴포넌트)
-- 시간이 지날수록 팀원 대부분 이러한 지름길을 택하게 되고(깨진 창문 이론), 영속성 계층이 점점 비대해지면서 의미가 퇴색됨
+- 시간이 지날수록 팀원 대부분 이러한 지름길을 택하게 되고(깨진 창문 이론), 영속성 계층은 점점 비대해지며 책임이 혼재됨
 
 ### 테스트하기 어려워진다
 
