--- a/만들면서 배우는 클린 아키텍처/01. 계층형 아키텍처의 문제는 무엇일까?.md
+++ b/만들면서 배우는 클린 아키텍처/01. 계층형 아키텍처의 문제는 무엇일까?.md
@@ -58,7 +58,9 @@
 
 - 프로젝트에 인원이 더 투입되어 개발이 빨라지려면 아키텍처가 동시 작업을 지원해야 함
 - 하지만 계층형 아키텍처는 이런 측면에서는 그다지 도움이 되지 않음
-    - 하나의 유스케이스를 3명이서 웹 계층, 도메인 계층, 영속성 계층을 담당? 계층형 아키텍처에서는 어려움. 모든 것이 영속성 계층 위에 만들어지기 때문에 영속성 계층이 먼저 만들어져야 하고, 그다음 도메인, 그다음 웹 계층을 만들어야 함. 그렇기에 특정 기능은 동시에 한명의 개발자만 작업할 수 있음
+    - 하나의 유스케이스를 3명이서 웹 계층, 도메인 계층, 영속성 계층을 담당? 계층형 아키텍처에서는 어려움
+      <br> 모든 것이 영속성 계층 위에 만들어지기 때문에 영속성 계층이 먼저 만들어져야 하고, 그다음 도메인, 그다음 웹 계층을 만들어야 함.
+      <br> 그렇기에 특정 기능은 동시에 한명의 개발자만 작업할 수 있음
     - 서로 다른 유스케이스에 대한 작업을 동시에 하는 경우도 같은 서비스를 동시에 편집하는 상황이 발생하고, 이는 병합 충돌과 잠재적으로 이전 코드로 되돌려야 하는 문제를 야기
 
 ## 정리
